--- a/index.html
+++ b/index.html
@@ -4,34 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title lang="en">Web Studio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <!--ШАПКА САЙТА-->
     <header>
-      <nav>
-        <a href="index.html" lang="en">Web Studio</a>
-        <ul>
-          <li>
-            <a href="">Студия</a>
+      <nav class="navigation">
+        <a class="logo-img" href="index.html" lang="en">Web Studio</a>
+        <ul class="navigation-list">
+          <li class="navigation-list-item">
+            <a class="navigation-list-link" href="">Студия</a>
           </li>
-          <li>
-            <a href="">Портфолио</a>
+          <li class="navigation-list-item">
+            <a class="navigation-list-link" href="portfolio.html">Портфолио</a>
           </li>
-          <li>
-            <a href="">Контакты</a>
+          <li class="navigation-list-item">
+            <a class="navigation-list-link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="header-address">
         <a href="">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
     </header>
 
     <!--HERO СЕКЦИЯ-->
     <main>
       <h1>Эффективные решения для вашего бизнеса</h1>
-      <button>Заказать услугу</button>
+      <button class="modal-btn">Заказать услугу</button>
       <!--О НАС-->
       <section>
         <h2 hidden>О Нас</h2>
@@ -270,3 +276,11 @@
     </footer>
   </body>
 </html>
+
+<!-- 
+  Raleway Bold
+  Roboto Black
+  Roboto Bold
+  Roboto Regular
+  Roboto Medium
+-->
