--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
             <a href="">Студия</a>
           </li>
           <li>
-            <a href="">Портфолио</a>
+            <a href="portfolio.html">Портфолио</a>
           </li>
           <li>
             <a href="">Контакты</a>
@@ -47,31 +47,67 @@
       </ul>
       <ul>
         <li>
-          <a href=""><img src="" alt="" /></a>
+          <a href=""
+            ><img src="" alt="" />
+            <p>Технокряк</p>
+            <p>Веб-сайт</p>
+          </a>
         </li>
         <li>
-          <a href=""><img src="" alt="" /></a>
+          <a href=""
+            ><img src="" alt="" />
+            <p>Постер New Orlean vs Golden Star</p>
+            <p>Дизайн</p>
+          </a>
         </li>
         <li>
-          <a href=""><img src="" alt="" /></a>
+          <a href=""
+            ><img src="" alt="" />
+            <p>Ресторан Seafood</p>
+            <p>Приложение</p>
+          </a>
         </li>
         <li>
-          <a href=""><img src="" alt="" /></a>
+          <a href=""
+            ><img src="" alt="" />
+            <p>Проект Prime</p>
+            <p>Маркетинг</p>
+          </a>
         </li>
         <li>
-          <a href=""><img src="" alt="" /></a>
+          <a href=""
+            ><img src="" alt="" />
+            <p>Проект Boxes</p>
+            <p>Приложение</p>
+          </a>
         </li>
         <li>
-          <a href=""><img src="" alt="" /></a>
+          <a href=""
+            ><img src="" alt="" />
+            <p>Inspiration has no Borders</p>
+            <p>Веб-сайт</p>
+          </a>
         </li>
         <li>
-          <a href=""><img src="" alt="" /></a>
+          <a href=""
+            ><img src="" alt="" />
+            <p>Издание Limited Edition</p>
+            <p>Дизайн</p>
+          </a>
         </li>
         <li>
-          <a href=""><img src="" alt="" /></a>
+          <a href=""
+            ><img src="" alt="" />
+            <p>Проект LAB</p>
+            <p>Маркетинг</p>
+          </a>
         </li>
         <li>
-          <a href=""><img src="" alt="" /></a>
+          <a href=""
+            ><img src="" alt="" />
+            <p>Growing Business</p>
+            <p>Приложение</p>
+          </a>
         </li>
       </ul>
     </main>
