--- a/index.html
+++ b/index.html
@@ -15,22 +15,28 @@
     <!--ШАПКА САЙТА-->
     <header>
       <nav class="navigation">
-        <a class="logo-img" href="index.html" lang="en">Web Studio</a>
-        <ul class="navigation-list">
+        <a class="logo-img" href="index.html" lang="en"
+          ><span>Web</span>Studio</a
+        >
+        <ul class="navigation-list list">
           <li class="navigation-list-item">
-            <a class="navigation-list-link" href="">Студия</a>
+            <a class="navigation-list-link link" href="">Студия</a>
           </li>
           <li class="navigation-list-item">
-            <a class="navigation-list-link" href="portfolio.html">Портфолио</a>
+            <a class="navigation-list-link link" href="portfolio.html"
+              >Портфолио</a
+            >
           </li>
           <li class="navigation-list-item">
-            <a class="navigation-list-link" href="">Контакты</a>
+            <a class="navigation-list-link link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
       <address class="header-address">
-        <a href="">info@devstudio.com</a>
-        <a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="header-address-link" href="">info@devstudio.com</a>
+        <a class="header-tel-link" href="tel:+380961111111"
+          >+38 096 111 11 11</a
+        >
       </address>
     </header>
 
@@ -41,7 +47,7 @@
       <!--О НАС-->
       <section>
         <h2 hidden>О Нас</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3>Внимание к деталям</h3>
             <p>
@@ -75,7 +81,7 @@
       <!--ЧЕМ МЫ ЗАНИМАЕМСЯ-->
       <section>
         <h2>Чем мы занимаемся</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="#" alt="Десктопные приложения" />
             <p><b>Десктопные приложения</b></p>
