--- a/portfolio.html
+++ b/portfolio.html
@@ -8,23 +8,29 @@
   <body>
     <!--ШАПКА САЙТА-->
     <header>
-      <nav>
-        <a href="index.html" lang="en">Web Studio</a>
-        <ul>
-          <li>
-            <a href="">Студия</a>
+      <nav class="navigation">
+        <a class="logo-img" href="index.html" lang="en"
+          ><span>Web</span>Studio</a
+        >
+        <ul class="navigation-list list">
+          <li class="navigation-list-item">
+            <a class="navigation-list-link link" href="">Студия</a>
           </li>
-          <li>
-            <a href="portfolio.html">Портфолио</a>
+          <li class="navigation-list-item">
+            <a class="navigation-list-link link" href="portfolio.html"
+              >Портфолио</a
+            >
           </li>
-          <li>
-            <a href="">Контакты</a>
+          <li class="navigation-list-item">
+            <a class="navigation-list-link link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <a href="">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <address class="header-address">
+        <a class="header-address-link" href="">info@devstudio.com</a>
+        <a class="header-tel-link" href="tel:+380961111111"
+          >+38 096 111 11 11</a
+        >
       </address>
     </header>
     <main>
