Правильно подключил таблицу и получилось исправить все ошибки

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/normalize.css" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--ШАПКА САЙТА-->
@@ -85,15 +85,24 @@
         <h2 class="services-title">Чем мы занимаемся</h2>
         <ul class="list">
           <li>
-            <img src="#" alt="Десктопные приложения" />
+            <img
+              src="./images/products/product-1.jpg"
+              alt="Десктопные приложения"
+            />
             <p class="services-description"><b>Десктопные приложения</b></p>
           </li>
           <li>
-            <img src="#" alt="Мобильные приложения" />
+            <img
+              src="./images/products/product-2.jpg"
+              alt="Мобильные приложения"
+            />
             <p class="services-description"><b>Мобильные приложения</b></p>
           </li>
           <li>
-            <img src="#" alt="Дизайнерские решения" />
+            <img
+              src="./images/products/product-3.jpg"
+              alt="Дизайнерские решения"
+            />
             <p class="services-description"><b>Дизайнерские решения</b></p>
           </li>
         </ul>
