--- a/portfolio.html
+++ b/portfolio.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/normalize.css" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--ШАПКА САЙТА-->
@@ -128,7 +128,10 @@
         <h3 hidden>Контакты</h3>
         <ul class="contact-list list">
           <li>
-            <a href="index.html"><span>Web</span>Studio</a>
+            <a class="logo-footer-link" href="./index.html"
+              ><span class="logo-footer-first-title">Web</span>
+              <span class="logo-footer-second-title">Studio</span></a
+            >
           </li>
           <li>
             <address class="address">
