исправил стиль почті и лого как в макете

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,8 @@
     <header>
       <nav class="navigation">
         <a class="logo-img" href="index.html" lang="en"
-          ><span>Web</span>Studio</a
+          ><span class="logo-first-title">Web</span>
+          <span class="logo-second-title">Studio</span></a
         >
         <ul class="navigation-list list">
           <li class="navigation-list-item">
@@ -128,9 +129,9 @@
         <h3 hidden>Контакты</h3>
         <ul class="contact-list list">
           <li>
-            <a class="logo-footer-link" href="./index.html"
-              ><span class="logo-footer-first-title">Web</span>
-              <span class="logo-footer-second-title">Studio</span></a
+            <a class="logo-link" href="./index.html"
+              ><span class="logo-first-title">Web</span>
+              <span class="logo-second-title">Studio</span></a
             >
           </li>
           <li>
