--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <header>
       <nav class="navigation">
         <a class="logo-img" href="index.html" lang="en"
-          ><span>Web</span>Studio</a
+          ><span class="logo-first-title">Web</span>
+          <span class="logo-second-title">Studio</span></a
         >
         <ul class="navigation-list list">
           <li class="navigation-list-item">
@@ -332,7 +333,10 @@
         <h3 hidden>Контакты</h3>
         <ul class="contact-list list">
           <li>
-            <a href="index.html"><span>Web</span>Studio</a>
+            <a href="index.html"
+              ><span class="logo-first-title">Web</span>
+              <span class="logo-second-title">Studio</span></a
+            >
           </li>
           <li>
             <address class="address">
